# canvas-painter

./: CMakeLists.txt
CanvasPainter/: CMakeLists.txt  canvas.hpp  canvas_accessor.cpp  canvas_accessor.hpp  canvas_descriptor.hpp  change_request.hpp  counted_object.hpp  point.hpp  point_collection.hpp
CanvasPainter/Tests/: CanvasPainterTests.cpp
CanvasPainter/exceptions/: collision_exception.hpp
CanvasPainter/shapes/: circle.hpp  rectangle.hpp  shape.hpp  shape_factory.hpp  triangle.hpp
